# qc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  lcm.c  normal-distribution.c  urandom-fast.c  xor-encryptor.c
include/: qc.h  qc_macro.h
include/qc/: args.h  config.h  endian.h  error.h  math.h  noreturn.h  random.h  string.h  tests.h  utils.h
include/qc/macro_impl/: tests-impl.h  utils-impl.h
src/: CMakeLists.txt  args.c  assert.c  die.c  emalloc.c  erealloc.c  error.c  math.c  platform_random.c  qc.h  qc_impl.c  qc_impl.h  qc_irrelevant.h  random.c  random_range.c  reopen-binary.c  sprintf_alloc.c  string.c  tests.c  util.c  utils.c
src/args/: args_impl.c  args_impl.h  args_public_api.c
src/config/: config.c  config_impl.c  config_impl.h  config_public_api.c  private.c  public.c
src/endian/: floating-point.c  integer16.c  integer32.c  integer64.c
src/math/: bitwise-rotation.c  fp-comparison.c  gcd.c  lcm.c  max.c  min.c
src/platform/: random.c  reopen-binary.c
src/platform/random/: random_android.c  random_bsd.c  random_linux.c  random_unknown.c  random_windows.c
src/platform/reopen-binary/: reopen-binary_posix.c  reopen-binary_windows.c
tests/: CMakeLists.txt  qc-args-custom-help-test.c  qc-args-custom-help.c  qc-args-flag.c  qc-args-help-short.c  qc-args-help-test.c  qc-args-help.c  qc-args-missing-help.c  qc-args-mixed-test.c  qc-args-mixed.c  qc-args-numerical-test.c  qc-args-numerical.c  qc-args-positional-test.c  qc-args-string-test.c  qc-args-string.c  qc-args-too-much-args.c  qc-assert-fails-cake.c  qc-assert-fails-constant.c  qc-assert-fails-negation.c  qc-assert-success.c  qc-die-fails.c  qc-emalloc-usable.c  qc-erealloc-usable-test.c  qc-erealloc-usable.c  qc-err-test.c  qc-err.c  qc-gcd-test.c  qc-gcd.c  qc-lcm-test.c  qc-max-test.c  qc-min-test.c  qc-random-range-works.c  qc-random-seed.c  qc-random-works.c  qc-sprintf-alloc-works-test.c  qc-sprintf-alloc-works.c
tests/args/: CMakeLists.txt  qc-args-custom-help-test.c  qc-args-flag-test.c  qc-args-help-short-test.c  qc-args-help-test.c  qc-args-mixed-test.c  qc-args-numerical-test.c  qc-args-positional-test.c  qc-args-similar-prefix-test.c  qc-args-string-default-bad-input-test.c  qc-args-string-test.c
tests/config/: CMakeLists.txt  qc-config-from-file-test.c  qc-config-from-string-test.c  sample.conf
tests/endian/: CMakeLists.txt  qc-endian-floating-point-test.c  qc-endian-integer16-test.c  qc-endian-integer32-test.c  qc-endian-integer64-test.c
tests/error/: CMakeLists.txt  qc-err-fatal-test.c  qc-err-null-tolerant-test.c  qc-err-test.c
tests/math/: CMakeLists.txt  qc-bitwise-rotation-test.c  qc-floating-point-comparison-test.c  qc-gcd-test.c  qc-lcm-test.c  qc-max-test.c  qc-min-test.c
tests/random/: CMakeLists.txt  qc-random-buf-test.c  qc-random-crypto-test.c  qc-random-range-works-test.c  qc-random-seed-test.c  qc-random-works-test.c
tests/string/: CMakeLists.txt  qc-asprintf-test.c  qc-bytes-to-hexstr-test.c  qc-hexstr-to-bytes-test.c  qc-string-parse-double-test.c  qc-string-parse-signed-test.c  qc-string-parse-unsigned-test.c
tests/utils/: CMakeLists.txt  qc-asprintf-test.c  qc-assert-success-test.c  qc-emalloc-usable-test.c  qc-erealloc-usable-test.c  qc-malloc-usable-test.c  qc-realloc-usable-test.c
