function(qc_add_example target)
    add_executable(${target} ${target}.c)
    target_link_libraries(${target} PUBLIC qc)
endfunction()

qc_add_example(lcm)
qc_add_example(xor-encryptor)
qc_add_example(urandom-fast)
qc_add_example(normal-distribution)

if (QC_TESTS)
    add_test(NAME qc-example-lcm-3-5-15 COMMAND lcm --left=3 --right=5)
    set_tests_properties(qc-example-lcm-3-5-15 PROPERTIES PASS_REGULAR_EXPRESSION "15")
    add_test(NAME qc-example-lcm-8-20-40 COMMAND lcm --left=8 --right=20)
    set_tests_properties(qc-example-lcm-8-20-40 PROPERTIES PASS_REGULAR_EXPRESSION "40")
endif ()
