set(RUNTIME_OUTPUT_DIRECTORY tests)

function(qc_add_test target)
    add_executable(${target} ${target}.c)
    target_link_libraries(${target} PUBLIC qc)
    add_test(NAME ${target} COMMAND ${target})
endfunction()

function(qc_add_failing_test target)
    qc_add_test(${target})
    set_tests_properties(${target} PROPERTIES WILL_FAIL ON)
endfunction()

qc_add_test(qc-emalloc-usable-test)
qc_add_test(qc-erealloc-usable-test)
qc_add_test(qc-assert-success-test)
qc_add_test(qc-random-works-test)
qc_add_test(qc-random-range-works-test)
qc_add_test(qc-random-seed-test)
qc_add_test(qc-gcd-test)
qc_add_test(qc-lcm-test)
qc_add_test(qc-min-test)
qc_add_test(qc-max-test)
qc_add_test(qc-sprintf-alloc-works-test)
qc_add_test(qc-args-help-test)
qc_add_test(qc-args-flag-test)
qc_add_test(qc-args-numerical-test)
qc_add_test(qc-args-string-test)
qc_add_test(qc-args-positional-test)
qc_add_test(qc-args-mixed-test)
qc_add_test(qc-args-help-short-test)
qc_add_test(qc-args-custom-help-test)
qc_add_test(qc-err-test)
